# rejasupotaro.github.io

./: .gitignore  AGENTS.md  Makefile  README.md  config.toml  date.sh  deploy.sh  index.html  index.xml  mkdocs.yml  pyproject.toml  run.sh  server.py  sitemap.xml
.agent/skills/draft/: SKILL.md
.agent/skills/research/: SKILL.md
.agent/skills/review/: SKILL.md
.github/workflows/: deploy.yml
articles/: 2014-02-28-41.md
categories/: index.html
categories/android/: index.xml
categories/android-design/: index.xml
categories/android-gradle/: index.xml
categories/design/: index.xml
categories/haskell/: index.xml
components/: nav-template.html
css/: style.css
docs/: embedding-evaluation-survey.md  embedding-evaluation.md  index.md  lexical-bias-in-dense-retrieval.md  lexical-bias.md  tags.md
docs/blog/: .authors.yml
docs/blog/posts/: embedding-evaluation-survey.md  welcome-to-my-blog.md
docs/css/: extra.css
docs/experiments/: images.md  texts.md
docs/posts/: embedding-evaluation-survey.md
docs/stylesheets/: extra.css
js/: nav-component.js
layouts/: index.html
layouts/chrome/: categories.html
pages/: images.html  texts.html
posts/: index.html  index.xml
public/: index.html  index.xml  sitemap.xml
public/categories/: index.html
public/categories/android/: index.html  index.xml
public/categories/android-test/: index.xml
public/categories/java/: index.xml
public/categories/not-tech/: index.html  index.xml
public/categories/programming/: index.html  index.xml
public/post/: index.xml
public/posts/: index.html  index.xml
(+85 files in other folders)
