[project]
name = "rejasupotaro-blog"
version = "0.1.0"
description = "Personal blog and experiments site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-excalidraw>=0.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-rss-plugin>=1.12.0",
    "mkdocs-shadcn>=0.9.8",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=2.0.1",
    "pymdown-extensions>=10.16.1",
]

[tool.uv]
dev-dependencies = []

