[project]
name = "rejasupotaro-blog"
version = "0.1.0"
description = "Personal blog and experiments site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.0",
    "mkdocs-rss-plugin>=1.12.0",
    "mkdocs-shadcn>=0.9.8",
    "pymdown-extensions>=10.16.1",
]



